--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,37 +1,53 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Deploy to GitHub Pages
+name: Deploy
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - master
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
 jobs:
-  build-and-deploy:
+  build:
+    name: Build
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Source
+      - name: Checkout repo
         uses: actions/checkout@v4
+
       - name: Setup Node
         uses: actions/setup-node@v4
-        with:
-          node-version: 22
-      - name: Install Dependencies
-        run: npm i
-      - name: Build Project
+
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
+
+      - name: Build project
         run: npm run build
-      - name: Upload artifacts
-        uses: actions/upload-pages-artifact@v3
+
+      - name: Copy 404.html
+        run: cp ./dist/index.html ./dist/404.html
+
+      - name: Upload production-ready build files
+        uses: actions/upload-artifact@v4
         with:
-          name: 'github-pages'
-          path: build
+          name: production-files
+          path: ./dist
+
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: production-files
+          path: ./dist
+
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          artifact_name: 'github-pages'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+
